src/index.css
@import url("https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Inconsolata");
@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: Roboto Mono, monospace;
  font-size: 18px;
  font-weight: 400;
  line-height: 30px;
  color: #555;
}

dd {
  margin-bottom: 1rem;
  margin-left: 0;
}
ul {
  list-style: none;
}

div ul li {
  list-style: none;
}

a {
  text-decoration: none;
}

hr {
  opacity: 0.2;
}

/*Semantic-ui Spinner*/
.ui.inline.loader {
  top: 480px;
}

.projects-list li {
  padding-right: 7%;
  text-transform: uppercase;
  line-height: 20px;
}

nav .menu-items li {
  text-transform: uppercase;
  line-height: 20px;
  padding-right: 60px;
}

.container ul li {
  cursor: pointer;
}
#menu-area {
  font-size: 14px;
  font-weight: 700;
  position: fixed;
  color: white;
  top: 0;
  width: 100%;
  height: 70px;
  transition: all 0.5s;
}

.menu-items {
  display: flex;
  justify-content: space-between;
  width: 30%;
  margin-top: 50px;
}
.menu-items a {
  color: white;
}
header {
  height: 100%;
  background-repeat: no-repeat;
  background-position: 50%;
  background-size: cover;
  color: #fff;
  margin-bottom: 40px;
}

.main-header {
  background: linear-gradient(
    54deg,
    rgba(74, 76, 179, 0.95) 34%,
    hsla(0, 34%, 71%, 0.95)
  );
}

.container {
  margin-left: 15%;
  margin-right: 15%;
  padding-left: 15px;
  padding-right: 15px;
}
#menu-area.cus-menu {
  background-color: white;
  z-index: 1;
  box-shadow: 0 0 27px rgba(96, 96, 96, 0.55);
}

#menu-area.cus-menu li {
  margin-top: -25px;
  transition: all 0.5s;
  opacity: 1;
}

#menu-area.cus-menu a {
  color: #555;
}

.menu-items a:after {
  content: "";
  position: absolute;
  width: 7px;
  height: 2px;
  bottom: 0;
  opacity: 0;
  transition: background 0.3s;
  background: white;
}

.menu-items a:hover {
  opacity: 0.5;
}

.menu-items a:hover:after {
  opacity: 1;
  color: #6d56c1;
}

#menu-area.cus-menu a:after {
  content: "";
  position: absolute;
  width: 7px;
  height: 2px;
  bottom: 27px;
  opacity: 0;
  transition: background 0.3s;
  background: #6d56c1;
}

#menu-area.cus-menu a:hover {
  color: #6d56c1;
}

#menu-area.cus-menu a:hover:after {
  opacity: 1;
  color: #6d56c1;
}

.portfolio-img {
  padding-right: 15px;
}
.portfolio-img img {
  height: 390px;
  object-fit: cover;
  border-radius: 5px;
  position: relative;
  top: 40px;
  box-shadow: 0 0 27px rgba(96, 96, 96, 0.34);
  margin-top: 10px;
  margin-right: 30px;
}

.personal-profile {
  padding-top: 90px;
  /*display: flex;*/
  color: white;
  font-family: Roboto, sans-serif;
}
.personal-info {
  padding-left: 15px;
  padding-right: 15px;
}
.personal-profile__name {
  margin-top: 40px;
  line-height: 50px;
  font-weight: 700;
  font-size: 44px;
  margin-bottom: 10px;
}
.personal-profile__work {
  margin-bottom: 40px;
  font-size: 16px;
  line-height: 24px;
}
.contact-list {
  margin-bottom: 20px;
}

.contact-list dt {
  float: left;
  font-weight: 700;
  text-transform: uppercase;
  opacity: 0.4;
}

.contact-list dd {
  padding-left: 100px;
}

.personal-profile__social i {
  color: white;
  font-size: 24px;
  margin-right: 15px;
  opacity: 0.4;
}

.personal-profile__social .fa:hover {
  color: white;
  opacity: 1;
}

/*about me section*/

section {
  padding-top: 60px;
  padding-bottom: 60px;
  color: #555555;
  font-family: Roboto, sans-serif;
}

.section__description {
  margin-bottom: 30px;
}

.section-title {
  font-family: Roboto Mono, monospace;
  line-height: 42px;
  font-size: 36px;
  margin-bottom: 40px;
}

.download-cv-btn {
  padding: 15px;
  background-color: #6d56c1;
  border-radius: 25px;
  font-size: 14px;
  border: 0;
  line-height: 20px;
  text-transform: uppercase;
  color: white;
  min-width: 170px;
  font-weight: 600;
  font-family: Roboto, sans-serif;
  margin-bottom: 10px;
  cursor: pointer;
}

.download-cv-btn:hover {
  opacity: 0.9;
}
.download-cv-btn i {
  padding-right: 5px;
  font-size: 17px;
  color: white;
}

/*RESUME SECTION*/
.row {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.column {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 83.33333%;
  flex: 0 0 83.33333%;
  max-width: 83.33333%;
}
.resume-title {
  font-family: Roboto Mono, monospace;
  font-weight: 700;
  font-size: 14px;
  line-height: 20px;
  text-transform: uppercase;
  letter-spacing: 5px;
  color: #999;
  margin-bottom: 40px;
}
.resume-list {
  margin-bottom: 30px;
  margin-top: 60px;
}
.resume-list-block {
  border-left: 2px solid #6d56c1;
  padding-left: 25px;
  padding-bottom: 50px;
  position: relative;
}

.resume-list-block:before {
  content: "";
  width: 8px;
  height: 8px;
  border-radius: 50%;
  border: 2px solid #6d56c1;
  position: absolute;
  background-color: white;
  left: -7px;
}
.resume-list-block-title {
  text-transform: uppercase;
  line-height: 20px;
  font-size: 14px;
  font-family: Roboto Mono, monospace;
  font-weight: 700;
  padding-bottom: 5px;
  color: #6d56c1;
}
.resume-list-block-date {
  color: #999999;
  line-height: 20px;
  padding-bottom: 10px;
  font-family: Inconsolata, monospace;
  font-size: 14px;
}

.column-resume-list {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 66.66667%;
  flex: 0 0 66.66667%;
  max-width: 66.66667%;
}

/*PROJECT SECTION*/
.projects-list {
  position: relative;
  display: flex;
  margin-bottom: 30px;
}

.projects-list span {
  color: #999999;
  font-size: 12px;
}

.projects-list span:after {
  content: "";
  position: absolute;
  width: 7px;
  height: 2px;
  bottom: 2px;
  opacity: 0;
  transition: background 0.3s;
  background: #6d56c1;
}

.projects-list span:hover {
  color: #6d56c1;
}
.projects-list span:hover:after {
  opacity: 1;
  color: #6d56c1;
}

li span.active {
  color: #6d56c1;
}
.project-section {
  width: 70%;
}
/* ... */

